Fix styling (#119)
* Fix animation-div not wrapping

* Fix main margin top not updating on page change

* Fix all text to have default cursor

* Update navbar and heamburger to only have a tag

* Remove p from GoToProfile

* Fix cards cursor pointer on hover over text

* Fix details and landing styling and layout

* Fix extra padding shown for all section h2

* Fix background bounce on Chrome/Mac

---------

--- a/starwarswiki/src/style/embla.scss
+++ b/starwarswiki/src/style/embla.scss
@@ -26,6 +26,7 @@
 		border: none;
 		position: absolute;
 		top: calc(50% - 1.5 * $margin);
+		cursor: pointer;
 
 		&.embla-prev {
 			left: 0px;
@@ -93,6 +94,7 @@
 			color: $black;
 			text-shadow: $yellow-stroke-ie;
 			text-transform: capitalize;
+			cursor: pointer;
 		}
 
 		img {
